added svg, fixed bugs

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
           <ul class="list">
             <li class="item">
               <a class="link icon" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="projects-img"
                     src="./images/portfolio/portfolio-1.jpg"
@@ -103,7 +103,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="project-img"
                     src="./images/portfolio/portfolio-2.jpg"
@@ -127,7 +127,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="projects-img"
                     src="./images/portfolio/portfolio-3.jpg"
@@ -151,7 +151,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="project-img"
                     src="./images/portfolio/portfolio-4.jpg"
@@ -175,7 +175,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="projects-img"
                     src="./images/portfolio/portfolio-5.jpg"
@@ -199,7 +199,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="projects-img"
                     src="./images/portfolio/portfolio-6.jpg"
@@ -223,7 +223,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="projects-img"
                     src="./images/portfolio/portfolio-7.jpg"
@@ -247,7 +247,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="projects-img"
                     src="./images/portfolio/portfolio-8.jpg"
@@ -271,7 +271,7 @@
             </li>
             <li class="item">
               <a class="link" href="">
-                <div class="project-thumb" style="relative">
+                <div class="project-thumb">
                   <img
                     class="projects-img"
                     src="./images/portfolio/portfolio-9.jpg"
