--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list">
             <li class="item">
-              <div class="gallery-thumb" style="relative">
+              <div class="gallery-thumb">
                 <img
                   class="gallery-img"
                   src="./images/main-page/service/service1.jpg"
@@ -156,7 +156,7 @@
               </div>
             </li>
             <li class="item">
-              <div class="gallery-thumb" style="relative">
+              <div class="gallery-thumb">
                 <img
                   class="gallery-img"
                   src="./images/main-page/service/service2.jpg"
@@ -172,7 +172,7 @@
               </div>
             </li>
             <li class="item">
-              <div class="gallery-thumb" style="relative">
+              <div class="gallery-thumb">
                 <img
                   class="gallery-img"
                   src="./images/main-page/service/service3.jpg"
