--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <h1 class="hero-cont hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-cont btn" type="button" data-modal-open>Заказать услугу</button>
-         
+
           <div class="backdrop is-hidden" data-modal>
             <div class="modal-wrapper">
               <button class="modal-btn" data-modal-close>
@@ -74,11 +74,10 @@
                   <use href="./images/icons.svg/symbol-defs-opt.svg#icon-close-black"></use>
                 </svg>
               </button>
-            <!-- <form action="" class="modal-form"></form> -->
+              <!-- <form action="" class="modal-form"></form> -->
             </div>
-        
           </div>
-        </div>  
+        </div>
       </section>
 
       <!-- Секция Особенности компании About -->
@@ -545,7 +544,7 @@
           </address>
         </div>
         <div class="icon-footer">
-          <h3 class="title">Присоединяйтесь</h3>
+          <p class="title"><b>Присоединяйтесь</b></p>
           <ul class="icon-list">
             <li class="icon-item">
               <a
@@ -600,6 +599,13 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="form-footer">
+          <p><b>Подпишитесь на рассылку</b></p>
+          <form class="form-url-request">
+            <input type="text" name="url" placeholder="E-mail" />
+            <button class="btn" type="submit">Подписаться</button>
+          </form>
         </div>
       </div>
     </footer>
