--- a/index.html
+++ b/index.html
@@ -67,40 +67,80 @@
           <h1 class="hero-cont hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-cont btn" type="button" data-modal-open>Заказать услугу</button>
 
+          <!-- Модальное окно Modal form -->
           <div class="backdrop is-hidden" data-modal>
             <div class="modal-wrapper">
-              <button class="modal-btn" data-modal-close>
-                <svg class="modal-icon" width="14" height="14">
+              <button class="modal-close-btn" data-modal-close>
+                <svg class="modal-close-icon" width="14" height="14">
                   <use href="./images/icons.svg/symbol-defs-opt.svg#icon-close-black"></use>
                 </svg>
-                <div class="modal-form">
-                  <h2>Оставьте свои данные, мы вам перезвоним</h2>
-                  <form class="speaker-wrapper">
-                    <div class="speaker-form" role="group">
-                      <label for="name">Имя</label>
-                      <input type="text" name="name" id="name" placeholder="E-mail" />
-
-                      <label for="name">Телефон</label>
-                      <input type="tel" name="tel" id="tel" placeholder="E-mail" />
-
-                      <label for="name">Почта</label>
-                      <input type="email" name="mail" id="mail" placeholder="E-mail" />
-
-                      <label for="name">Комментарий</label>
-                      <input type="text" name="comment" id="comment" placeholder="Введите текст" />
-                    </div>
-
-                    <div class="modal-agreement">
-                      <input type="checkbox" value="agreement" id="agreement" />
-                      <p>
-                        Соглашаюсь с рассылкой и принимаю
-                        <a class="link" href="">Условия договора</a>
-                      </p>
-                    </div>
-                    <button class="btn" type="submit">Отправить</button>
-                  </form>
-                </div>
               </button>
+              <div class="modal-form">
+                <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
+                <form class="speaker-wrapper">
+                  <div class="speaker-form" role="group" autocomplete="off">
+                    <div class="name form-field">
+                      <label class="form-label" for="name">Имя</label>
+                      <input
+                        class="form-input"
+                        type="text"
+                        name="name"
+                        id="name"
+                        placeholder="Name"
+                        autofocus
+                        required
+                      />
+                    </div>
+                    <div class="tel form-field">
+                      <label class="form-label" for="tel">Телефон</label>
+                      <input
+                        class="form-input"
+                        type="tel"
+                        name="tel"
+                        id="tel"
+                        placeholder="Phone"
+                        required
+                      />
+                    </div>
+                    <div class="mail form-field">
+                      <label class="form-label" for="mail">Почта</label>
+                      <input
+                        class="form-input"
+                        type="email"
+                        name="mail"
+                        id="mail"
+                        placeholder="E-mail"
+                      />
+                    </div>
+                    <div class="comment form-field">
+                      <label class="comment form-label" for="comment">Комментарий</label>
+                      <textarea
+                        class="comment form-input"
+                        type="text"
+                        name="comment"
+                        id="comment"
+                        placeholder="Введите текст"
+                        rows="8"
+                      ></textarea>
+                    </div>
+                  </div>
+
+                  <div class="modal-policy">
+                    <input
+                      class="form-checkbox"
+                      type="checkbox"
+                      name="policy"
+                      id="policy"
+                      required
+                    />
+                    <label class="label-checkbox" for="policy">
+                      Соглашаюсь с рассылкой и принимаю
+                      <a class="link" href="">Условия договора</a>
+                    </label>
+                  </div>
+                  <button class="btn" type="submit">Отправить</button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
