work with modal icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -349,7 +349,7 @@
                 rel="noopener noreferrer"
                 aria-label="Инстаграм иконка"
               >
-                <svg class="icon instagram">
+                <svg class="icon person-modalform">
                   <use href="./images/icons.svg/symbol-defs-opt.svg#icon-instagram"></use>
                 </svg>
               </a>
