--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 </svg>
               </button>
               <div class="modal-form">
-                <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
+                <p class="speaker-title">
+                  <strong>Оставьте свои данные, мы вам перезвоним</strong>
+                </p>
                 <form class="speaker-wrapper">
                   <div class="speaker-form" role="group" autocomplete="off">
                     <div class="name form-field">
@@ -90,9 +92,12 @@
                         autofocus
                         required
                       />
+                      <svg class="icon instagram">
+                        <use href="./images/icons.svg/symbol-defs-opt.svg#icon-instagram"></use>
+                      </svg>
                     </div>
                     <div class="tel form-field">
-                      <label class="form-label" for="tel">Телефон</label>
+                      <label class="form-label" for="tel"><span>Телефон</span></label>
                       <input
                         class="form-input"
                         type="tel"
@@ -103,7 +108,7 @@
                       />
                     </div>
                     <div class="mail form-field">
-                      <label class="form-label" for="mail">Почта</label>
+                      <label class="form-label" for="mail"><span>Почта</span></label>
                       <input
                         class="form-input"
                         type="email"
@@ -113,14 +118,16 @@
                       />
                     </div>
                     <div class="comment form-field">
-                      <label class="comment form-label" for="comment">Комментарий</label>
+                      <label class="comment form-label" for="comment"
+                        ><span>Комментарий</span></label
+                      >
                       <textarea
                         class="comment form-input"
                         type="text"
                         name="comment"
                         id="comment"
                         placeholder="Введите текст"
-                        rows="8"
+                        rows="7"
                       ></textarea>
                     </div>
                   </div>
@@ -669,7 +676,7 @@
         <div class="form-footer">
           <p class="title"><b>Подпишитесь на рассылку</b></p>
           <form class="form-request">
-            <input type="text" name="e-mail" placeholder="E-mail" />
+            <input class="text" type="text" name="e-mail" placeholder="E-mail" />
             <button class="btn" type="submit">Подписаться</button>
           </form>
         </div>
