finished modal, checkbox, correct subscribe form

--- a/portfolio.html
+++ b/portfolio.html
@@ -382,6 +382,13 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe-form-wrapper">
+          <label class="subscribe-form">
+            <span class="subscribe-title">Подпишитесь на рассылку</span>
+            <input class="text" type="text" name="e-mail" placeholder="E-mail" />
+          </label>
+          <button class="btn" type="submit">Подписаться</button>
+        </form>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
