--- a/index.html
+++ b/index.html
@@ -75,79 +75,75 @@
                   <use href="./images/icons.svg/symbol-defs-opt.svg#icon-close-black"></use>
                 </svg>
               </button>
-              <div class="modal-form">
-                <p class="speaker-title">
+              <form class="modal-form" action="POST" autocomplete="off">
+                <p class="modal-form-title">
                   <strong>Оставьте свои данные, мы вам перезвоним</strong>
                 </p>
-                <form class="speaker-wrapper">
-                  <div class="speaker-form" role="group" autocomplete="off">
-                    <div class="name form-field">
-                      <label class="form-label" for="name">Имя</label>
-                      <input
-                        class="form-input"
-                        type="text"
-                        name="name"
-                        id="name"
-                        placeholder="Name"
-                        autofocus
-                        required
-                      />
-                      <svg class="icon instagram">
-                        <use href="./images/icons.svg/symbol-defs-opt.svg#icon-instagram"></use>
-                      </svg>
-                    </div>
-                    <div class="tel form-field">
-                      <label class="form-label" for="tel"><span>Телефон</span></label>
-                      <input
-                        class="form-input"
-                        type="tel"
-                        name="tel"
-                        id="tel"
-                        placeholder="Phone"
-                        required
-                      />
-                    </div>
-                    <div class="mail form-field">
-                      <label class="form-label" for="mail"><span>Почта</span></label>
-                      <input
-                        class="form-input"
-                        type="email"
-                        name="mail"
-                        id="mail"
-                        placeholder="E-mail"
-                      />
-                    </div>
-                    <div class="comment form-field">
-                      <label class="comment form-label" for="comment"
-                        ><span>Комментарий</span></label
-                      >
-                      <textarea
-                        class="comment form-input"
-                        type="text"
-                        name="comment"
-                        id="comment"
-                        placeholder="Введите текст"
-                        rows="7"
-                      ></textarea>
-                    </div>
-                  </div>
-
-                  <div class="modal-policy">
-                    <input
-                      class="form-checkbox"
-                      type="checkbox"
-                      name="policy"
-                      id="policy"
-                      required
-                    />
-                    <label class="label-checkbox" for="policy">
-                      Соглашаюсь с рассылкой и принимаю
-                      <a class="link" href="">Условия договора</a>
-                    </label>
-                  </div>
-                  <button class="btn" type="submit">Отправить</button>
-                </form>
-              </div>
+                <label class="form-field">
+                  <span class="form-label">Имя</span>
+                  <input
+                    class="form-input"
+                    type="text"
+                    name="name"
+                    placeholder=" "
+                    autofocus
+                    required
+                  />
+                  <svg class="form-icon person">
+                    <use href="./images/icons.svg/symbol-defs-opt.svg#icon-person-modalform"></use>
+                  </svg>
+                </label>
+                <label class="form-field">
+                  <span class="form-label">Телефон</span>
+                  <input
+                    class="form-input"
+                    type="tel"
+                    name="tel"
+                    placeholder=" "
+                    autofocus
+                    required
+                  />
+                  <svg class="form-icon tel">
+                    <use href="./images/icons.svg/symbol-defs-opt.svg#icon-phone-modalform"></use>
+                  </svg>
+                </label>
+                <label class="form-field">
+                  <span class="form-label">Почта</span>
+                  <input
+                    class="form-input"
+                    type="email"
+                    name="email"
+                    placeholder=" "
+                    autofocus
+                    required
+                  />
+                  <svg class="form-icon email">
+                    <use href="./images/icons.svg/symbol-defs-opt.svg#icon-email-modalform"></use>
+                  </svg>
+                </label>
+                <label class="form-field">
+                  <span class="form-label">Комментарий</span>
+                  <textarea
+                    class="form-input comment"
+                    type="text"
+                    name="comment"
+                    id="comment"
+                    placeholder="Введите текст"
+                    rows="8"
+                  ></textarea>
+                </label>
+                <label class="checkbox-field">
+                  <input class="checkbox-input visually-hidden" type="checkbox" name="policy" />
+                  <svg class="checkbox-icon" width="16" height="15">
+                    <use href="./images/icons.svg/symbol-defs-opt.svg#icon-check-modalform"></use>
+                  </svg>
+                  <span class="checkbox-title"
+                    >Соглашаюсь с рассылкой и принимаю
+                    <a href="" class="checkbox-link">Условия договора</a></span
+                  >
+                </label>
+                <button class="btn" type="submit">Отправить</button>
+              </form>
             </div>
           </div>
         </div>
@@ -673,13 +669,13 @@
             </li>
           </ul>
         </div>
-        <div class="form-footer">
-          <p class="title"><b>Подпишитесь на рассылку</b></p>
-          <form class="form-request">
+        <form class="subscribe-form-wrapper">
+          <label class="subscribe-form">
+            <span class="subscribe-title">Подпишитесь на рассылку</span>
             <input class="text" type="text" name="e-mail" placeholder="E-mail" />
-            <button class="btn" type="submit">Подписаться</button>
-          </form>
-        </div>
+          </label>
+          <button class="btn" type="submit">Подписаться</button>
+        </form>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
