--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     class="form-input"
                     type="text"
                     name="name"
-                    placeholder=" "
+                    placeholder=""
                     autofocus
                     required
                   />
@@ -95,28 +95,14 @@
                 </label>
                 <label class="form-field">
                   <span class="form-label">Телефон</span>
-                  <input
-                    class="form-input"
-                    type="tel"
-                    name="tel"
-                    placeholder=" "
-                    autofocus
-                    required
-                  />
+                  <input class="form-input" type="tel" name="tel" placeholder="" required />
                   <svg class="form-icon tel">
                     <use href="./images/icons.svg/symbol-defs-opt.svg#icon-phone-modalform"></use>
                   </svg>
                 </label>
                 <label class="form-field">
                   <span class="form-label">Почта</span>
-                  <input
-                    class="form-input"
-                    type="email"
-                    name="email"
-                    placeholder=" "
-                    autofocus
-                    required
-                  />
+                  <input class="form-input" type="email" name="email" placeholder="" required />
                   <svg class="form-icon email">
                     <use href="./images/icons.svg/symbol-defs-opt.svg#icon-email-modalform"></use>
                   </svg>
